Support for defining properties for new Host
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2035 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/host/src/com/sun/tools/visualvm/host/Bundle.properties
+++ b/visualvm/host/src/com/sun/tools/visualvm/host/Bundle.properties
@@ -32,6 +32,6 @@ LBL_Unknown_Host=<Unknown Host>
 
 LBL_Unknown=<Unknown>
 
-LBL_Add_Remote_Host=Add Remote Host...
+LBL_Add_Remote_Host=Add Remote &Host...
 
 ToolTip_Add_Remote_Host=Add Remote Host
