--- a/visualvm/host/src/com/sun/tools/visualvm/host/impl/Bundle.properties
+++ b/visualvm/host/src/com/sun/tools/visualvm/host/impl/Bundle.properties
@@ -22,15 +22,13 @@
 # CA 95054 USA or visit www.sun.com if you need additional information or
 # have any questions.
 
-LBL_Add_Remote_Host=Add Remote &Host...
-
-ToolTip_Add_Remote_Host=Add Remote Host
-
 Title_Add_Remote_Host=Add Remote Host
 
 LBL_Host_name=&Host name\:
 
 LBL_Display_name=&Display name\:
+
+BTN_AdavancedSettings=&Advanced Settings
 
 LBL_OK=OK
 
