I18N for jstatd properties
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2056 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/jvmstat/src/com/sun/tools/visualvm/jvmstat/application/Bundle.properties
+++ b/visualvm/jvmstat/src/com/sun/tools/visualvm/jvmstat/application/Bundle.properties
@@ -28,3 +28,14 @@ MSG_Broken_Jps=<html><b>Local Java applications cannot be detected.</b><br><br>P
 MSG_Broken_Jsp_Link=<a href="https://visualvm.dev.java.net/troubleshooting.html#jpswin">https://visualvm.dev.java.net/troubleshooting.html#jpswin</a>
 
 MSG_Broken_Jsp_NoLink=<nobr>https://visualvm.dev.java.net/troubleshooting.html#jpswin</nobr>
+
+BTN_AddDefault=Add &Default
+BTN_AddCustom=Add &Custom
+BTN_Remove=&Remove
+LBL_Port1=Port\:
+LBL_Port2=&Port\:
+LBL_Refresh1=Refresh interval\:
+LBL_Refresh2=Re&fresh interval\:
+LBL_RefreshUnits=sec.
+
+MSG_JstatdDescr=Configures connections to jstatd running on the host
