jstatd properties: <No jstatd connections defined> hint
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2059 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/jvmstat/src/com/sun/tools/visualvm/jvmstat/application/Bundle.properties
+++ b/visualvm/jvmstat/src/com/sun/tools/visualvm/jvmstat/application/Bundle.properties
@@ -37,5 +37,6 @@ LBL_Port2=&Port\:
 LBL_Refresh1=Refresh interval\:
 LBL_Refresh2=Re&fresh interval\:
 LBL_RefreshUnits=sec.
+LBL_NoConnection=<No jstatd connection defined>
 
 MSG_JstatdDescr=Configures connections to jstatd running on the host
