Minor Properties rewording
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2066 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/core/src/com/sun/tools/visualvm/core/properties/Bundle.properties
+++ b/visualvm/core/src/com/sun/tools/visualvm/core/properties/Bundle.properties
@@ -27,6 +27,6 @@ LBL_OK=OK
 
 ACT_Properties=&Properties
 
-DESCR_Properties=Edit properties
+DESCR_Properties=Properties
 
-CAP_EditProperties=Edit Properties of {0}
+CAP_EditProperties=Properties of {0}
