JmxConnectionCustomizer extends PropertiesProvider
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2071 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/jmx/src/com/sun/tools/visualvm/jmx/impl/Bundle.properties
+++ b/visualvm/jmx/src/com/sun/tools/visualvm/jmx/impl/Bundle.properties
@@ -49,3 +49,6 @@ MSG_Cannot_connect_using=Cannot connect to {0} using {1}
 LBL_Connection_type=Connection &type\:
 
 MSG_OPENJMX=open application specified by JMX connection (host:port)
+
+CAP_JmxConnection=JMX Connection
+DESCR_JmxConnection=JMX connection setup
