Monitor tab saved into Application Snapshot, partially addresses Issue 235
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2098 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/applicationviews/src/com/sun/tools/visualvm/application/views/monitor/Bundle.properties
+++ b/visualvm/applicationviews/src/com/sun/tools/visualvm/application/views/monitor/Bundle.properties
@@ -22,7 +22,8 @@
 # CA 95054 USA or visit www.sun.com if you need additional information or
 # have any questions.
 
-LBL_Unknown=unknown
+# HTML-formatted: <unknown> (&lt; and &gt; must remain!)
+LBL_Unknown=&lt;unknown&gt;
 
 LBL_Monitor=Monitor
 
@@ -46,7 +47,8 @@ LBL_Perform_GC=Perform GC
 
 LBL_Heap_Dump=Heap Dump
 
-LBL_Uptime=Uptime
+# HTML-formatted: Uptime: 11:20 AM
+LBL_Uptime=<nobr><b>Uptime:</b> {0}</nobr>
 
 LBL_Heap_size=Size
 
