UI change: changed order of actions in File menu, changed order of toolbars, DataSource toolbar instead of File
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2109 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/core/src/com/sun/tools/visualvm/core/Bundle.properties
+++ b/visualvm/core/src/com/sun/tools/visualvm/core/Bundle.properties
@@ -29,4 +29,5 @@ OpenIDE-Module-Short-Description=VisualVM main module
 com_sun_tools_visualvm_core_update_center=https://visualvm.dev.java.net/uc/updates.xml.gz?{$netbeans.hash.code}
 Services/AutoupdateType/com_sun_tools_visualvm_core_update_center.instance=VisualVM Plugins Center
 Menu/Applications=&Applications
-Toolbars/Snapshot=Snapshot
+Toolbars/Snapshot=&Snapshot
+Toolbars/DataSource=&Data Source
