--- a/visualvm/profiler/src/com/sun/tools/visualvm/profiler/Bundle.properties
+++ b/visualvm/profiler/src/com/sun/tools/visualvm/profiler/Bundle.properties
@@ -58,7 +58,7 @@ MSG_profiling_stopped=profiling stopped
 
 MSG_Exclude_Java_Core_Classes=Exclude Java Core Classes
 
-MSG_Class_Sharing=<b>WARNING\!</b> Class sharing is enabled for this JVM. This can cause problems when profiling the application and eventually may crash it. Please see the Troubleshooting guide for more information and steps to fix the problem: {0}.
+MSG_Class_Sharing=<b>WARNING\!</b> Class sharing is enabled for this JVM. This can cause problems when profiling the application and eventually may crash it. Please see the VisualVM Troubleshooting Guide for more information and steps to fix the problem: {0}.
 
 MSG_Class_Sharing_Link=<a href="https://visualvm.dev.java.net/troubleshooting.html#xshare">https://visualvm.dev.java.net/troubleshooting.html#xshare</a>
 
