module names fixed
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2124 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/plugins/nbproject/project.properties
+++ b/plugins/nbproject/project.properties
@@ -5,8 +5,8 @@ modules=\
     ${project.com.sun.appserv.management}:\
     ${project.org.netbeans.modules.consumervisualvm}:\
     ${project.org.netbeans.modules.consumerentrypoints}:\
-    ${project.org.netbeans.modules.extensions}:\
-    ${project.org.netbeans.modules.buffermonitor}:\
+    ${project.com.sun.tools.visualvm.modules.extensions}:\
+    ${project.com.sun.tools.visualvm.modules.buffermonitor}:\
     ${project.com.sun.tools.visualvm.modules.systray}:\
     ${project.com.sun.tools.visualvm.application.type.custom}:\
     ${project.com.sun.tools.visualvm.modules.customtype.lib}:\
@@ -25,8 +25,8 @@ project.net.java.visualvm.modules.glassfish=glassfish
 project.jsyntaxpane.lib=jsyntaxpane-lib
 project.org.netbeans.modules.consumerentrypoints=consumerentrypoints
 project.org.netbeans.modules.consumervisualvm=consumervisualvm
-project.org.netbeans.modules.extensions=extensions
-project.org.netbeans.modules.buffermonitor=buffermonitor
+project.com.sun.tools.visualvm.modules.extensions=extensions
+project.com.sun.tools.visualvm.modules.buffermonitor=buffermonitor
 
 branding.token=visualvm
 branding.dir=none
