Implemented Issue 312 - Enable opening application snapshots using the Load action and --openfile option  - ApplicationSnapshotCategory now supports opening snapshots
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2127 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/application/src/com/sun/tools/visualvm/application/snapshot/Bundle.properties
+++ b/visualvm/application/src/com/sun/tools/visualvm/application/snapshot/Bundle.properties
@@ -54,3 +54,7 @@ MSG_Saving_snapshot=Saving snapshot of {0}...
 MSG_Adding=Adding {0}...
 
 MSG_Adding_snapshot_failed=<html><b>Adding snapshot {0} failed.</b><br><br>Make sure the file is not broken.</html>
+
+MSG_Loading=Loading {0}..
+
+MSG_Opening_snapshot_failed=<html><b>Opening snapshot {0} failed.</b><br><br>No known displayable data found in the snapshot.</html>.
