sampler module added to the suite
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2130 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/plugins/nbproject/project.properties
+++ b/plugins/nbproject/project.properties
@@ -12,6 +12,7 @@ modules=\
     ${project.com.sun.tools.visualvm.modules.customtype.lib}:\
     ${project.jsyntaxpane.lib}:\
     ${project.com.sun.tools.visualvm.modules.oqlsyntax}:\
+    ${project.com.sun.tools.visualvm.modules.sampler}:\
     ${project.com.sun.tools.visualvm.modules.security}
 project.com.sun.appserv.management=glassfish/amx-api
 project.com.sun.tools.visualvm.application.type.custom=extapptypes
@@ -25,6 +26,7 @@ project.net.java.visualvm.modules.glassfish=glassfish
 project.jsyntaxpane.lib=jsyntaxpane-lib
 project.org.netbeans.modules.consumerentrypoints=consumerentrypoints
 project.org.netbeans.modules.consumervisualvm=consumervisualvm
+project.com.sun.tools.visualvm.modules.sampler=sampler
 project.com.sun.tools.visualvm.modules.extensions=extensions
 project.com.sun.tools.visualvm.modules.buffermonitor=buffermonitor
 
