Polishing UI code in VisualVM-MBeans
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2150 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/plugins/mbeans/src/com/sun/tools/visualvm/modules/mbeans/Bundle.properties
+++ b/plugins/mbeans/src/com/sun/tools/visualvm/modules/mbeans/Bundle.properties
@@ -57,7 +57,7 @@ LBL_BorderedComponent.moreOrLessButton.toolTip=Toggle to show more or less infor
 LBL_Chart=Chart
 LBL_Chart.mnemonic='C'
 LBL_ClassName=ClassName
-LBL_ConnectionNotEstablished=Data not available in this tab because JMX connection to the JMX agent could not be established.
+LBL_ConnectionNotEstablished=Data not available because JMX connection to the JMX agent could not be established.
 LBL_Constructor=Constructor
 LBL_CurrentValue=Current value: {0}
 LBL_DoubleClickToExpandCollapse=Double click to expand/collapse
