API change: DataSourceDescriptor.providesProperties() added, Properties everywhere...
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2161 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/core/src/com/sun/tools/visualvm/core/snapshot/Bundle.properties
+++ b/visualvm/core/src/com/sun/tools/visualvm/core/snapshot/Bundle.properties
@@ -25,3 +25,10 @@
 LBL_Snapshots=Snapshots
 
 LBL_Saving=Saving {0}...
+
+LBL_SourceProperties=Source
+DESCR_SourceProperties=File or directory of the snapshot
+LBL_File=File\:
+LBL_Directory=Directory\:
+LBL_NoFile=<no file>
+LBL_UnavailableFile=<not available>
