--- a/visualvm/jmx/src/com/sun/tools/visualvm/jmx/impl/Bundle.properties
+++ b/visualvm/jmx/src/com/sun/tools/visualvm/jmx/impl/Bundle.properties
@@ -52,3 +52,7 @@ MSG_OPENJMX=open application specified by JMX connection (host:port)
 
 CAP_JmxConnection=JMX Connection
 DESCR_JmxConnection=JMX connection setup
+
+LBL_ConnectionProperties=Connection
+DESCR_ConnectionProperties=Connection used to discover and manage the application
+MSG_ConnectionProperties=The application is managed by the JMX connection. See the JMX Connection tab for details.
