--- a/visualvm/jvmstat/src/com/sun/tools/visualvm/jvmstat/application/Bundle.properties
+++ b/visualvm/jvmstat/src/com/sun/tools/visualvm/jvmstat/application/Bundle.properties
@@ -41,4 +41,9 @@ LBL_Refresh2=Re&fresh interval\:
 LBL_RefreshUnits=sec.
 LBL_NoConnection=<No jstatd connection defined>
 
-MSG_JstatdDescr=Configures connections to jstatd running on the host
+CAP_JstatdProperties=jstatd Connections
+DESCR_JstatdProperties=Connections to jstatd running on the host
+
+LBL_ConnectionProperties=Connection
+DESCR_ConnectionProperties=Connection used to discover and manage the application
+MSG_ConnectionProperties=The application is managed by the jvmstat connection.
