--- a/visualvm/application/src/com/sun/tools/visualvm/application/Bundle.properties
+++ b/visualvm/application/src/com/sun/tools/visualvm/application/Bundle.properties
@@ -22,28 +22,7 @@
 # CA 95054 USA or visit www.sun.com if you need additional information or
 # have any questions.
 
-Title_Add_Remote_Host=Add Remote Host
 
-LBL_Host_name=&Host name\:
-
-LBL_Display_name=&Display name\:
-
-BTN_AdavancedSettings=&Advanced Settings
-
-LBL_OK=OK
-
-LBL_Searching_for_host=Searching for host 
-
-MSG_Wrong_Host=<html><b>Cannot resolve host {0}</b><br><br>Make sure you have entered correct<br>host name or address.</html>
-
-MSG_Already_Monitored=<html>Host {0} already monitored as {1}</html>
-
-Title_Unresolved_Hosts=Could Not Resolve Hosts
-
-MSG_Unresolved_Hosts=<html><b>These hosts could not be resolved:</b><br>Do you want to resolve them on next VisualVM session?<br><br></html>
-
-LBL_TargetProperties=Target
-DESCR_TargetProperties=Basic host information
-LBL_Resolving=resolving...
-LBL_DnsName=DNS name\:
-LBL_IpAddress=IP address\:
+LBL_ConnectionProperties=Connection
+DESCR_ConnectionProperties=Connection used to discover and manage the application
+MSG_ConnectionProperties=Host VisualVM instance is managed by direct VM connection.
