Host properties rewording: Target -> Host
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2163 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/host/src/com/sun/tools/visualvm/host/impl/Bundle.properties
+++ b/visualvm/host/src/com/sun/tools/visualvm/host/impl/Bundle.properties
@@ -42,8 +42,8 @@ Title_Unresolved_Hosts=Could Not Resolve Hosts
 
 MSG_Unresolved_Hosts=<html><b>These hosts could not be resolved:</b><br>Do you want to resolve them on next VisualVM session?<br><br></html>
 
-LBL_TargetProperties=Target
-DESCR_TargetProperties=Basic host information
+LBL_HostProperties=Host
+DESCR_HostProperties=Basic host information
 LBL_Resolving=resolving...
 LBL_DnsName=DNS name\:
 LBL_IpAddress=IP address\:
