Improved jstatd properties
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2165 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/jvmstat/src/com/sun/tools/visualvm/jvmstat/application/Bundle.properties
+++ b/visualvm/jvmstat/src/com/sun/tools/visualvm/jvmstat/application/Bundle.properties
@@ -44,6 +44,11 @@ LBL_NoConnection=<No jstatd connection defined>
 CAP_JstatdProperties=jstatd Connections
 DESCR_JstatdProperties=Connections to jstatd running on the host
 
+LBL_JstatdAppProperties=jstatd Connection
+DESCR_JstatdAppProperties=jstatd connection setup
+LBL_Connection=&Connection\:
+
 LBL_ConnectionProperties=Connection
 DESCR_ConnectionProperties=Connection used to discover and manage the application
-MSG_ConnectionProperties=The application is managed by the jvmstat connection.
+MSG_ConnectionPropertiesDefault=The application is managed by local jvmstat connection.
+MSG_ConnectionPropertiesCustom=The application is managed by the jvmstat connection. See the jstatd Connection tab for details.
