--- a/visualvm/jmx/src/com/sun/tools/visualvm/jmx/impl/Bundle.properties
+++ b/visualvm/jmx/src/com/sun/tools/visualvm/jmx/impl/Bundle.properties
@@ -55,4 +55,4 @@ DESCR_JmxConnection=JMX connection setup
 
 LBL_ConnectionProperties=Connection
 DESCR_ConnectionProperties=Connection used to discover and manage the application
-MSG_ConnectionProperties=The application is managed by the JMX connection. See the JMX Connection tab for details.
+MSG_ConnectionProperties=The application is managed by a JMX connection. See the JMX Connection tab for details.
