VisualVM-Profiler: snapshot button displays both icon and text
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2174 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/profiler/src/com/sun/tools/visualvm/profiler/Bundle.properties
+++ b/visualvm/profiler/src/com/sun/tools/visualvm/profiler/Bundle.properties
@@ -76,6 +76,8 @@ LBL_Status=Status:
 
 MSG_Profiling_results=Profiling results
 
+LBL_Snapshot=Snapshot
+
 MSG_Compare_Snapshots=&Compare
 
 DESCR_Compare_Snapshots=Compare profiler snapshots
