--- a/plugins/glassfish/src/net/java/visualvm/modules/glassfish/Bundle.properties
+++ b/plugins/glassfish/src/net/java/visualvm/modules/glassfish/Bundle.properties
@@ -27,8 +27,11 @@ OpenIDE-Module-Long-Description=\
     A sample plugin giving an overview of advanced monitoring capabilities of VisualVM. \n\
     Enhances monitoring of GlassFish application server by adding specialized overview, new tab for monitoring HTTP Service and the ability to visually select and monitor any of the deployed web applications
 OpenIDE-Module-Name=VisualVM-Glassfish
+OpenIDE-Module-Short-Description=Enhaned monitoring of GlassFish application server
+
 ManagementTabContent.jLabel1.text=jLabel1
 ManagementTabContent.jLabel2.text=jLabel2
 ManagementTabContent.jLabel3.text=jLabel3
 ManagementTabContent.jLabel4.text=jLabel4
-OpenIDE-Module-Short-Description=Enhaned monitoring of GlassFish application server
+
+DESCR_GlassFish=GlassFish instance (domain: {0}). GlassFish is an open source application server for the Java EE platform.
