--- a/visualvm/application/src/com/sun/tools/visualvm/application/type/Bundle.properties
+++ b/visualvm/application/src/com/sun/tools/visualvm/application/type/Bundle.properties
@@ -24,6 +24,8 @@
 
 OpenIDE-Module-Name=VisualVM-ApplicationType
 
+LBL_NbPlatformApplication=NetBeans Platform application
+
 LBL_Unknown_Application=<Unknown Application>
 
 LBL_Unknown_Version=<Unknown Version>
@@ -35,3 +37,33 @@ LBL_Java_Plug-in=Java Plug-in
 LBL_Java_Web_Start=Java Web Start
 
 LBL_Unknown=<Unknown>
+
+DESCR_VisualVMApplicationType=VisualVM is a visual tool integrating several commandline JDK tools and lightweight profiling capabilities. Designed for both production and development time use, it further enhances the capability of monitoring and performance analysis for the Java SE platform.
+DESCR_NetBeansBasedApplicationType=Java application built on top of the NetBeans Platform.
+DESCR_NetBeansApplicationType=NetBeans IDE: The only IDE you need! Runs on Windows, Linux, Mac OS X and Solaris. NetBeans IDE is open-source and free.
+DESCR_JDeveloperApplicationType=Oracle JDeveloper is a free integrated development environment that simplifies the development of Java-based SOA applications and user interfaces with support for the full development life cycle.
+DESCR_MavenApplicationType=Apache Maven is a software project management and comprehension tool. Based on the concept of a project object model (POM), Maven can manage a project's build, reporting and documentation from a central piece of information.
+DESCR_Ant=Apache Ant is a Java-based build tool. In theory, it is kind of like Make, but without Make's wrinkles.
+DESCR_GlassFish=GlassFish is an open source application server for the Java EE platform.
+DESCR_Tomcat=Apache Tomcat is an open source software implementation of the Java Servlet and JavaServer Pages technologies.
+DESCR_JBoss=JBoss Application Server is an open source, standards-compliant, J2EE based application server implemented in 100% Pure Java.
+DESCR_JConsole=jconsole: JMX-compliant graphical tool for monitoring a Java virtual machine.
+DESCR_Jps=jps: Java virtual machine process status tool. Lists the instrumented HotSpot Java Virtual Machines (JVMs) on the target system.
+DESCR_Jstat=jstat: Java virtual machine statistics monitoring tool. Displays performance statistics for an instrumented HotSpot Java virtual machine (JVM).
+DESCR_Jstatd=jstatd: virtual machine jstat daemon. RMI server application that monitors for the creation and termination of instrumented HotSpot Java virtual machines (JVMs) and provides a interface to allow remote monitoring tools to attach to JVMs running on the local host.
+DESCR_Jstack=jstack: prints Java stack traces of Java threads for a given Java process or core file or a remote debug server.
+DESCR_Jmap=jmap: prints shared object memory maps or heap memory details of a given process or core file or a remote debug server.
+DESCR_Jhat=jhat: Java heap analysis tool. Parses a Java heap dump file and launches a webserver to enable browsing heap dumps using a webbrowser.
+DESCR_Jinfo=jinfo: prints Java configuration information for a given Java process or core file or a remote debug server.
+DESCR_Jsadebugd=jsadebugd: serviceability agent debug daemon. Attaches to a Java process or core file and acts as a debug server.
+DESCR_Jar=jar: Java archive tool. Combines multiple files into a single JAR archive file.
+DESCR_Pack200=pack200: JAR packing tool. Java application that transforms a JAR file into a compressed pack200 file using the Java gzip compressor.
+DESCR_JavaDoc=javadoc: Java API documentation generator. Generates HTML pages of API documentation from Java source files.
+DESCR_Javac=javac: Java programming language compiler. Reads class and interface definitions, written in the Java programming language, and compiles them into bytecode class files.
+DESCR_Javah=javah: C header and stub file generator. Generates C header and source files that are needed to implement native methods.
+DESCR_Javap=javap: Java class file disassembler. Disassembles a class file.
+DESCR_JarSigner=jarsigner: JAR signing and verification tool. Used for signing Java ARchive (JAR) files and verifying the signatures and integrity of signed JAR files.
+DESCR_Apt=apt: annotation processing tool. Finds and executes annotation processors based on the annotations present in the set of specified source files being examined.
+DESCR_AppletViewer=appletviewer: Java applet viewer. Allows to run applets outside of the context of a World-Wide Web browser.
+DESCR_JavaDb=Java DB is Sun's supported distribution of the Apache Derby open-source database. Java DB is 100 percent Java technology and easy to use.
+DESCR_JdkDemoApp=JFC demo application.
