DataSourceDescriptor.getDescription() available for hosts and snapshots
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2184 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/application/src/com/sun/tools/visualvm/application/snapshot/Bundle.properties
+++ b/visualvm/application/src/com/sun/tools/visualvm/application/snapshot/Bundle.properties
@@ -58,3 +58,5 @@ MSG_Adding_snapshot_failed=<html><b>Adding snapshot {0} failed.</b><br><br>Make 
 MSG_Loading=Loading {0}..
 
 MSG_Opening_snapshot_failed=<html><b>Opening snapshot {0} failed.</b><br><br>No known displayable data found in the snapshot.</html>.
+
+DESCR_ApplicationSnapshot=Application snapshot.
