--- a/visualvm/host/src/com/sun/tools/visualvm/host/Bundle.properties
+++ b/visualvm/host/src/com/sun/tools/visualvm/host/Bundle.properties
@@ -35,3 +35,7 @@ LBL_Unknown=<Unknown>
 LBL_Add_Remote_Host=Add Remote &Host...
 
 ToolTip_Add_Remote_Host=Add Remote Host
+
+DESCR_Local=Local system.
+DESCR_Remote=Remote host.
+DESCR_Unknown=Container for applications running on an unknown host.
