--- a/visualvm/profiler/src/com/sun/tools/visualvm/profiler/Bundle.properties
+++ b/visualvm/profiler/src/com/sun/tools/visualvm/profiler/Bundle.properties
@@ -153,3 +153,5 @@ LBL_Track_Every2=object allocations
 TOOLTIP_Track_Every=Only every n-th object is tracked to reduce profiling overhead. Total number of allocated objects is not affected.
 
 TOOLTIP_Stack_Traces=Information about methods allocating the objects is collected
+
+DESCR_ProfilerSnapshot=Profiler snapshot.
