--- a/visualvm/coredump/src/com/sun/tools/visualvm/coredump/Bundle.properties
+++ b/visualvm/coredump/src/com/sun/tools/visualvm/coredump/Bundle.properties
@@ -27,3 +27,5 @@ OpenIDE-Module-Name=VisualVM-CoreDump
 LBL_Save_Core_Dump_As=Save Core Dump As
 
 LBL_VM_Coredumps=VM Coredumps
+
+DESCR_CoreDump=Core dump.
