Implemented Add jstatd Connection action for Hosts  - introduces new public API PropertiesSupport.hasProperties and PropertiesSupport.openProperties
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2193 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/jvmstat/src/com/sun/tools/visualvm/jvmstat/application/Bundle.properties
+++ b/visualvm/jvmstat/src/com/sun/tools/visualvm/jvmstat/application/Bundle.properties
@@ -52,3 +52,6 @@ LBL_ConnectionProperties=Connection
 DESCR_ConnectionProperties=Connection used to discover and manage the application
 MSG_ConnectionPropertiesDefault=The application is managed by a local jvmstat connection.
 MSG_ConnectionPropertiesCustom=The application is managed by a jvmstat connection. See the jstatd Connection tab for details.
+
+ACT_AddJstatdConnection=Add js&tatd Connection...
+DESCR_AddJstatdConnection=Adds new jstatd connection.
