Sampler: added module description
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2201 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/plugins/sampler/src/com/sun/tools/visualvm/modules/sampler/Bundle.properties
+++ b/plugins/sampler/src/com/sun/tools/visualvm/modules/sampler/Bundle.properties
@@ -23,6 +23,10 @@
 # have any questions.
 
 OpenIDE-Module-Display-Category=Profiling
+OpenIDE-Module-Long-Description=\
+    This plugin implements a sampling CPU and memory profiler (in contrast to the built-in Profiler which uses instrumentation).\
+    <BR><BR>\nCPU profiling requires a JMX connection to the monitored application, once correctly set up you can profile both local and remote applications.\
+    <BR><BR>\nMemory profiling requires Attach API, so only local applications running on JDK 6+ are supported.
 OpenIDE-Module-Name=VisualVM-Sampler
 
 LBL_Sampler=Sampler
@@ -109,6 +113,7 @@ LBL_Profile_Excl=Do not profile packages\:
 
 MSG_Incorrect_CPU_settings=Incorrect CPU settings specified.
 
+OpenIDE-Module-Short-Description=Sampling CPU and memory profiler
 TOOLTIP_Root_Classes=<html>Profiling will start when code of these classes is invoked:<br><br><code><b>org.mypackage.**</b></code> defines all classes in the package and all subpackages<br><code><b>org.mypackage.*&nbsp;</b></code> defines all classes in the package<br><code><b>org.mypackage.MyClass</b></code> defines only <code>MyClass</code><br><br><b>Empty text</b> defines all classes</html>
 
 TOOLTIP_New_Runnables=Classes invoked from new Threads or Runnables are automatically instrumented
