Simplified DataSourceDescriptor.getDescription() value for VisualVM Application
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2225 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/application/src/com/sun/tools/visualvm/application/type/Bundle.properties
+++ b/visualvm/application/src/com/sun/tools/visualvm/application/type/Bundle.properties
@@ -38,7 +38,7 @@ LBL_Java_Web_Start=Java Web Start
 
 LBL_Unknown=<Unknown>
 
-DESCR_VisualVMApplicationType=VisualVM is a visual tool integrating several commandline JDK tools and lightweight profiling capabilities. Designed for both production and development time use, it further enhances the capability of monitoring and performance analysis for the Java SE platform.
+DESCR_VisualVMApplicationType=VisualVM is a visual tool integrating several commandline JDK tools and lightweight profiling capabilities.
 DESCR_NetBeansBasedApplicationType=Java application built on top of the NetBeans Platform.
 DESCR_NetBeansApplicationType=NetBeans IDE: The only IDE you need! Runs on Windows, Linux, Mac OS X and Solaris. NetBeans IDE is open-source and free.
 DESCR_JDeveloperApplicationType=Oracle JDeveloper is a free integrated development environment that simplifies the development of Java-based SOA applications and user interfaces with support for the full development life cycle.
