--- a/plugins/security/src/com/sun/tools/visualvm/modules/security/Bundle.properties
+++ b/plugins/security/src/com/sun/tools/visualvm/modules/security/Bundle.properties
@@ -48,4 +48,4 @@ SEP_ExportImport=Export / Import
 BTN_LoadFromFile=&Load From File...
 BTN_SaveToFile=&Save To File...
 MSG_RestartVisualVM=VisualVM needs to be restarted for the changes to take effect.
-BTN_RestartVisualVM=Restart now!
+CHK_RestartVisualVM=Restart &VisualVM after clicking the OK button
