--- a/visualvm/startup/nbproject/project.properties
+++ b/visualvm/startup/nbproject/project.properties
@@ -22,6 +22,7 @@
 # CA 95054 USA or visit www.sun.com if you need additional information or
 # have any questions.
 
+javac.source=1.5
 license.file=src/com/sun/tools/visualvm/modules/startup/LICENSE.txt
 module.jar.dir=core
 
