--- a/visualvm/startup/src/com/sun/tools/visualvm/modules/startup/Bundle.properties
+++ b/visualvm/startup/src/com/sun/tools/visualvm/modules/startup/Bundle.properties
@@ -1,5 +1,5 @@
 #
-# Copyright 2007-2008 Sun Microsystems, Inc.  All Rights Reserved.
+# Copyright 2007-2010 Sun Microsystems, Inc.  All Rights Reserved.
 # DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
 #
 # This code is free software; you can redistribute it and/or modify it
@@ -27,7 +27,7 @@ OpenIDE-Module-Display-Category=Tools
 OpenIDE-Module-Name=VisualVM-Startup
 
 #Licence dialog
-MSG_LicenseDlgTitle=License Agreement
+MSG_LicenseDlgTitle=VisualVM License Agreement
 MSG_LicenseDlgLabelTop=Please read the following license agreement carefully.
 MSG_LicenseDlgLabelBottom=If you accept all terms of the agreement, click I Accept \
 to start VisualVM. You must accept the agreement to start VisualVM.
