--- a/plugins/nbproject/project.properties
+++ b/plugins/nbproject/project.properties
@@ -34,3 +34,5 @@ project.com.sun.tools.visualvm.modules.tracermonitor=tracermonitor
 
 branding.token=visualvm
 branding.dir=none
+
+run.args.extra=-J-Dsun.java2d.noddraw=true
