--- a/visualvm/nbproject/project.properties
+++ b/visualvm/nbproject/project.properties
@@ -44,4 +44,4 @@ project.com.sun.tools.visualvm.modules.startup=startup
 
 visualvm-platform=../plugins/
 
-run.args.extra=-J-Xms24m -J-Xmx256m -J-Dnetbeans.accept_license_class=com.sun.tools.visualvm.modules.startup.AcceptLicense
+run.args.extra=-J-Xms24m -J-Xmx256m -J-Dnetbeans.accept_license_class=com.sun.tools.visualvm.modules.startup.AcceptLicense -J-Dsun.java2d.noddraw=true
