--- a/plugins/nbproject/project.properties
+++ b/plugins/nbproject/project.properties
@@ -14,7 +14,8 @@ modules=\
     ${project.com.sun.tools.visualvm.modules.tracermonitor}:\
     ${project.com.sun.tools.visualvm.modules.sampler}:\
     ${project.com.sun.tools.visualvm.modules.saplugin}:\
-    ${project.com.sun.tools.visualvm.modules.security}
+    ${project.com.sun.tools.visualvm.modules.security}:\
+    ${project.com.sun.tools.visualvm.modules.tracer.dynamic}
 project.com.sun.appserv.management=glassfish/amx-api
 project.com.sun.tools.visualvm.application.type.custom=extapptypes
 project.com.sun.tools.visualvm.modules.customtype.lib=extapptypes.lib
@@ -23,6 +24,7 @@ project.com.sun.tools.visualvm.modules.mbeans=mbeans
 project.com.sun.tools.visualvm.modules.oqlsyntax=oqlsyntax
 project.com.sun.tools.visualvm.modules.security=security
 project.com.sun.tools.visualvm.modules.systray=systray
+project.com.sun.tools.visualvm.modules.tracer.dynamic=tracer.dynamic
 project.net.java.visualvm.modules.glassfish=glassfish
 project.jsyntaxpane.lib=jsyntaxpane-lib
 project.com.sun.tools.visualvm.modules.sampler=sampler
