--- a/plugins/tracer/src/com/sun/tools/visualvm/modules/tracer/impl/Bundle.properties
+++ b/plugins/tracer/src/com/sun/tools/visualvm/modules/tracer/impl/Bundle.properties
@@ -24,6 +24,7 @@
 
 OpenIDE-Module-Display-Category=Libraries
 OpenIDE-Module-Long-Description=\
-    VisualVM-Tracer is a framework and graphical user interface for visual tracing of applications or other data sources using Tracer probes.
+    VisualVM-Tracer is a framework and graphical user interface for visual tracing of applications or other data sources using Tracer probes.\n\n\
+    Note: the public API of this module is not stable, incompatible changes may happen at any time!
 OpenIDE-Module-Name=VisualVM-Tracer
 OpenIDE-Module-Short-Description=Tracer framework and GUI
