--- a/visualvm/nbproject/project.properties
+++ b/visualvm/nbproject/project.properties
@@ -21,7 +21,8 @@ modules=\
     ${project.com.sun.tools.visualvm.host.views}:\
     ${project.com.sun.tools.visualvm.jvm}:\
     ${project.com.sun.tools.visualvm.charts}:\
-    ${project.com.sun.tools.visualvm.api.caching}
+    ${project.com.sun.tools.visualvm.api.caching}:\
+    ${project.com.sun.tools.visualvm.host.remote}
 project.com.sun.tools.visualvm.api.caching=caching.api
 project.com.sun.tools.visualvm.application=application
 project.com.sun.tools.visualvm.applicationviews=applicationviews
@@ -30,6 +31,7 @@ project.com.sun.tools.visualvm.charts=charts
 project.com.sun.tools.visualvm.coredump=coredump
 project.com.sun.tools.visualvm.heapdump=heapdump
 project.com.sun.tools.visualvm.host=host
+project.com.sun.tools.visualvm.host.remote=hostremote
 project.com.sun.tools.visualvm.host.views=hostviews
 project.com.sun.tools.visualvm.jmx=jmx
 project.com.sun.tools.visualvm.jvm=jvm
