--- a/visualvm/appui/nbproject/project.properties
+++ b/visualvm/appui/nbproject/project.properties
@@ -24,3 +24,6 @@
 
 javac.source=1.5
 javac.compilerargs=-Xlint -Xlint:-serial
+license.file=../startup/src/com/sun/tools/visualvm/modules/startup/LICENSE.txt
+nbm.homepage=https://visualvm.dev.java.net
+
