--- a/visualvm/attach/nbproject/project.properties
+++ b/visualvm/attach/nbproject/project.properties
@@ -24,3 +24,6 @@
 
 javac.source=1.5
 cp.extra=${tools.jar}
+license.file=../startup/src/com/sun/tools/visualvm/modules/startup/LICENSE.txt
+nbm.homepage=https://visualvm.dev.java.net
+
