--- a/visualvm/coredump/src/com/sun/tools/visualvm/coredump/Bundle.properties
+++ b/visualvm/coredump/src/com/sun/tools/visualvm/coredump/Bundle.properties
@@ -22,6 +22,7 @@
 # CA 95054 USA or visit www.sun.com if you need additional information or
 # have any questions.
 
+OpenIDE-Module-Display-Category=Infrastructure
 OpenIDE-Module-Name=VisualVM-CoreDump
 
 LBL_Save_Core_Dump_As=Save Core Dump As
