--- a/visualvm/jvm/src/com/sun/tools/visualvm/jvm/Bundle.properties
+++ b/visualvm/jvm/src/com/sun/tools/visualvm/jvm/Bundle.properties
@@ -22,6 +22,7 @@
 # CA 95054 USA or visit www.sun.com if you need additional information or
 # have any questions.
 
+OpenIDE-Module-Display-Category=Infrastructure
 OpenIDE-Module-Name=VisualVM-JVM
 
 MSG_ThreadDumpfailed=Take Thread Dump failed
