--- a/visualvm/startup/nbproject/project.properties
+++ b/visualvm/startup/nbproject/project.properties
@@ -26,3 +26,6 @@ javac.source=1.5
 license.file=src/com/sun/tools/visualvm/modules/startup/LICENSE.txt
 module.jar.dir=core
 
+license.file=../startup/src/com/sun/tools/visualvm/modules/startup/LICENSE.txt
+nbm.homepage=https://visualvm.dev.java.net
+
