--- a/plugins/jconsole/src/com/sun/tools/visualvm/modules/jconsole/options/Bundle.properties
+++ b/plugins/jconsole/src/com/sun/tools/visualvm/modules/jconsole/options/Bundle.properties
@@ -34,3 +34,4 @@ BTN_Remove=&Remove
 BTN_MoveUp=Move &Up
 BTN_MoveDown=Move &Down
 FIL_PluginFileFilterDescr=JConsole plugin (*.jar or directory)
+MSG_ReopenTab=The application needs to be (re)opened for the changes to take effect.
