API change - enabling sorting & positions persistence for remote Hosts  - fixes Issue 371 - Sort hostnames alphabetically.
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2534 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/host/src/com/sun/tools/visualvm/host/Bundle.properties
+++ b/visualvm/host/src/com/sun/tools/visualvm/host/Bundle.properties
@@ -40,3 +40,7 @@ ToolTip_Add_Remote_Host=Add Remote Host
 DESCR_Local=Local system.
 DESCR_Remote=Remote host.
 DESCR_Unknown=Container for applications running on an unknown host.
+
+ACT_SortHosts=&Sort Hosts By
+ACT_TimeAdded=&Time Added
+ACT_DisplayName=&Display Name
