basic nbm informations added
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2535 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/heapdump/src/com/sun/tools/visualvm/heapdump/Bundle.properties
+++ b/visualvm/heapdump/src/com/sun/tools/visualvm/heapdump/Bundle.properties
@@ -22,6 +22,7 @@
 # CA 95054 USA or visit www.sun.com if you need additional information or
 # have any questions.
 
+OpenIDE-Module-Display-Category=Infrastructure
 OpenIDE-Module-Name=VisualVM-HeapDump
 
 LBL_Save_Heap_Dump_As=Save Heap Dump As
