--- a/visualvm/core/src/com/sun/tools/visualvm/core/snapshot/Bundle.properties
+++ b/visualvm/core/src/com/sun/tools/visualvm/core/snapshot/Bundle.properties
@@ -32,3 +32,7 @@ LBL_File=File\:
 LBL_Directory=Directory\:
 LBL_NoFile=<no file>
 LBL_UnavailableFile=<not available>
+
+ACT_SortSnapshots=&Sort Snapshots By
+ACT_TimeAdded=&Time Added
+ACT_DisplayName=&Display Name
