Sorting & positions persistence for Core Dumps, further sorting improvements
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2548 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/core/src/com/sun/tools/visualvm/core/snapshot/Bundle.properties
+++ b/visualvm/core/src/com/sun/tools/visualvm/core/snapshot/Bundle.properties
@@ -33,6 +33,6 @@ LBL_Directory=Directory\:
 LBL_NoFile=<no file>
 LBL_UnavailableFile=<not available>
 
-ACT_SortSnapshots=&Sort Snapshots By
+ACT_SortSnapshots=Sort &Snapshots By
 ACT_TimeAdded=&Time Added
 ACT_DisplayName=&Display Name
