--- a/visualvm/coredump/src/com/sun/tools/visualvm/coredump/Bundle.properties
+++ b/visualvm/coredump/src/com/sun/tools/visualvm/coredump/Bundle.properties
@@ -30,3 +30,7 @@ LBL_Save_Core_Dump_As=Save Core Dump As
 LBL_VM_Coredumps=VM Coredumps
 
 DESCR_CoreDump=Core dump.
+
+ACT_SortCoreDumps=Sort &Core Dumps By
+ACT_TimeAdded=&Time Added
+ACT_DisplayName=&Display Name
