--- a/visualvm/host/src/com/sun/tools/visualvm/host/Bundle.properties
+++ b/visualvm/host/src/com/sun/tools/visualvm/host/Bundle.properties
@@ -41,6 +41,6 @@ DESCR_Local=Local system.
 DESCR_Remote=Remote host.
 DESCR_Unknown=Container for applications running on an unknown host.
 
-ACT_SortHosts=&Sort Hosts By
+ACT_SortHosts=Sort &Hosts By
 ACT_TimeAdded=&Time Added
 ACT_DisplayName=&Display Name
