--- a/visualvm/application/src/com/sun/tools/visualvm/application/type/Bundle.properties
+++ b/visualvm/application/src/com/sun/tools/visualvm/application/type/Bundle.properties
@@ -67,3 +67,4 @@ DESCR_Apt=apt: annotation processing tool. Finds and executes annotation process
 DESCR_AppletViewer=appletviewer: Java applet viewer. Allows to run applets outside of the context of a World-Wide Web browser.
 DESCR_JavaDb=Java DB is Sun's supported distribution of the Apache Derby open-source database. Java DB is 100 percent Java technology and easy to use.
 DESCR_JdkDemoApp=JFC demo application.
+DESCR_JRMC=Oracle JRockit Mission Control is a set of powerful tools running on the Oracle JRockit JVM. These tools deliver advanced, unobtrusive JVM monitoring and management, suitable for use both in development and production environments.
