Sorting of applications, persistent order of JMX applications
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2562 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/application/src/com/sun/tools/visualvm/application/Bundle.properties
+++ b/visualvm/application/src/com/sun/tools/visualvm/application/Bundle.properties
@@ -26,3 +26,8 @@
 LBL_ConnectionProperties=Connection
 DESCR_ConnectionProperties=Connection used to discover and manage the application
 MSG_ConnectionProperties=Host VisualVM instance is managed by direct VM connection.
+
+ACT_SortApps=Sort &Applications By
+ACT_TimeAdded=&Time Added
+ACT_DisplayName=&Display Name
+ACT_Pid=&Process ID
