Recognizing Oracle WebLogic Server
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2564 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/application/src/com/sun/tools/visualvm/application/type/Bundle.properties
+++ b/visualvm/application/src/com/sun/tools/visualvm/application/type/Bundle.properties
@@ -68,3 +68,4 @@ DESCR_AppletViewer=appletviewer: Java applet viewer. Allows to run applets outsi
 DESCR_JavaDb=Java DB is Sun's supported distribution of the Apache Derby open-source database. Java DB is 100 percent Java technology and easy to use.
 DESCR_JdkDemoApp=JFC demo application.
 DESCR_JRMC=Oracle JRockit Mission Control is a set of powerful tools running on the Oracle JRockit JVM. These tools deliver advanced, unobtrusive JVM monitoring and management, suitable for use both in development and production environments.
+DESCR_WLS=Oracle WebLogic Server. Application server for building and deploying enterprise Java EE applications.
