--- a/plugins/nbproject/project.properties
+++ b/plugins/nbproject/project.properties
@@ -15,6 +15,7 @@ modules=\
     ${project.com.sun.tools.visualvm.modules.sampler}:\
     ${project.com.sun.tools.visualvm.modules.saplugin}:\
     ${project.com.sun.tools.visualvm.modules.security}:\
+    ${project.com.sun.tools.visualvm.modules.tracerjvmstat}:\
     ${project.com.sun.tools.visualvm.modules.tracer.dynamic}
 project.com.sun.appserv.management=glassfish/amx-api
 project.com.sun.tools.visualvm.application.type.custom=extapptypes
@@ -32,6 +33,7 @@ project.com.sun.tools.visualvm.modules.extensions=extensions
 project.com.sun.tools.visualvm.modules.saplugin=saplugin
 project.com.sun.tools.visualvm.modules.buffermonitor=buffermonitor
 project.com.sun.tools.visualvm.modules.tracer=tracer
+project.com.sun.tools.visualvm.modules.tracerjvmstat=tracerjvmstat
 project.com.sun.tools.visualvm.modules.tracermonitor=tracermonitor
 
 branding.token=visualvm
