Switching trunk to platform & profiler 6.9 RC2
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2590 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/nbproject/platform.properties
+++ b/visualvm/nbproject/platform.properties
@@ -12,10 +12,10 @@ disabled.modules=\
     org.openide.compat,\
     org.openide.util.enumerations
 enabled.clusters=\
-    platform11,\
-    profiler3
+    platform,\
+    profiler
 nbjdk.active=default
-nbplatform.active=NetBeans_Platform_6.8_(Build_091221-4fc006d17cb1)
+nbplatform.active=NetBeans Platform 6.9 RC2 (Build 100607-babd5536fc49)
 suite.dir=${basedir}
 netbeans.dest.dir=${suite.dir}/netbeans
 harness.dir=${netbeans.dest.dir}/harness
