--- a/visualvm/nbproject/project.properties
+++ b/visualvm/nbproject/project.properties
@@ -23,7 +23,8 @@ modules=\
     ${project.com.sun.tools.visualvm.charts}:\
     ${project.com.sun.tools.visualvm.api.caching}:\
     ${project.com.sun.tools.visualvm.host.remote}:\
-    ${project.com.sun.tools.visualvm.uisupport}
+    ${project.com.sun.tools.visualvm.uisupport}:\
+    ${project.com.sun.tools.visualvm.sampler}
 project.com.sun.tools.visualvm.api.caching=caching.api
 project.com.sun.tools.visualvm.application=application
 project.com.sun.tools.visualvm.applicationviews=applicationviews
@@ -39,6 +40,7 @@ project.com.sun.tools.visualvm.jvm=jvm
 project.com.sun.tools.visualvm.jvmstat=jvmstat
 project.com.sun.tools.visualvm.profiler=profiler
 project.com.sun.tools.visualvm.sa=sa
+project.com.sun.tools.visualvm.sampler=sampler
 project.com.sun.tools.visualvm.threaddump=threaddump
 project.com.sun.tools.visualvm.tools=tools
 project.com.sun.tools.visualvm.core=core
