Adding -J-Dsun.java2d.d3d=false to VisualVM and plugins suite
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2592 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/plugins/nbproject/project.properties
+++ b/plugins/nbproject/project.properties
@@ -39,4 +39,4 @@ project.com.sun.tools.visualvm.modules.tracermonitor=tracermonitor
 branding.token=visualvm
 branding.dir=none
 
-run.args.extra=-J-Dsun.java2d.noddraw=true
+run.args.extra=-J-Dsun.java2d.noddraw=true -J-Dsun.java2d.d3d=false
