--- a/visualvm/nbproject/project.properties
+++ b/visualvm/nbproject/project.properties
@@ -50,4 +50,4 @@ project.com.sun.tools.visualvm.uisupport=uisupport
 
 visualvm-platform=../plugins/
 
-run.args.extra=-J-Xms24m -J-Xmx256m -J-Dnetbeans.accept_license_class=com.sun.tools.visualvm.modules.startup.AcceptLicense -J-Dsun.java2d.noddraw=true
+run.args.extra=-J-Xms24m -J-Xmx256m -J-Dnetbeans.accept_license_class=com.sun.tools.visualvm.modules.startup.AcceptLicense -J-Dsun.java2d.noddraw=true -J-Dsun.java2d.d3d=false
