--- a/plugins/nbproject/project.properties
+++ b/plugins/nbproject/project.properties
@@ -39,4 +39,4 @@ project.com.sun.tools.visualvm.modules.tracermonitor=tracermonitor
 branding.token=visualvm
 branding.dir=none
 
-run.args.extra=-J-Dsun.java2d.noddraw=true -J-Dsun.java2d.d3d=false
+run.args.extra=-J-client -J-Dsun.java2d.noddraw=true -J-Dsun.java2d.d3d=false
