new version of NetBeans 6.9 platform
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2601 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/nbproject/platform.properties
+++ b/visualvm/nbproject/platform.properties
@@ -15,7 +15,7 @@ enabled.clusters=\
     platform,\
     profiler
 nbjdk.active=default
-nbplatform.active=NetBeans Platform 6.9 RC2 (Build 100607-babd5536fc49)
+nbplatform.active=NetBeans Platform 6.9 (Build 100609-dd12ae64a19c)
 suite.dir=${basedir}
 netbeans.dest.dir=${suite.dir}/netbeans
 harness.dir=${netbeans.dest.dir}/harness
