use Keyring to store proxy password
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2607 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/appui/src/com/sun/tools/visualvm/modules/appui/options/Bundle.properties
+++ b/visualvm/appui/src/com/sun/tools/visualvm/modules/appui/options/Bundle.properties
@@ -41,3 +41,4 @@ NetworkOptionsPanel_NoProxyHint=(e.g. localhost, *.dev.java.net, 127.0.0.1)
 NetworkOptionsPanel_AuthCheckbox=Proxy re&quires authentication\:
 NetworkOptionsPanel_Username=Us&ername\:
 NetworkOptionsPanel_Password=Pass&word\:
+NetworkOptionsPanel_Password_Description=Proxy password
