VisualVM-Profiling module, initial commit  - common base for VisualVM-Profiler and VisualVM-Sampler  - Profiling Options  - I18N TBD  - needs testing
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2616 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/core/src/com/sun/tools/visualvm/core/options/Bundle.properties
+++ b/visualvm/core/src/com/sun/tools/visualvm/core/options/Bundle.properties
@@ -33,8 +33,6 @@ LBL_Charts_Cache=Charts Cache
 LBL_Monitored_Host2=Monitored H&ost\:
 LBL_min=min.
 LBL_Monitored_Data2=Monitored D&ata\:
-LBL_Profiler=Profiler
+LBL_Miscellaneous=Miscellaneous
 MSG_Do_Not_Show_Again=Reset Do Not Show Again confirmations\:
 BTN_Reset=&Reset
-BTN_Reset2=R&eset
-LBL_ResetData=Reset calibration data\:
