--- a/visualvm/nbproject/project.properties
+++ b/visualvm/nbproject/project.properties
@@ -24,7 +24,8 @@ modules=\
     ${project.com.sun.tools.visualvm.api.caching}:\
     ${project.com.sun.tools.visualvm.host.remote}:\
     ${project.com.sun.tools.visualvm.uisupport}:\
-    ${project.com.sun.tools.visualvm.sampler}
+    ${project.com.sun.tools.visualvm.sampler}:\
+    ${project.com.sun.tools.visualvm.profiling}
 project.com.sun.tools.visualvm.api.caching=caching.api
 project.com.sun.tools.visualvm.application=application
 project.com.sun.tools.visualvm.applicationviews=applicationviews
@@ -39,6 +40,7 @@ project.com.sun.tools.visualvm.jmx=jmx
 project.com.sun.tools.visualvm.jvm=jvm
 project.com.sun.tools.visualvm.jvmstat=jvmstat
 project.com.sun.tools.visualvm.profiler=profiler
+project.com.sun.tools.visualvm.profiling=profiling
 project.com.sun.tools.visualvm.sa=sa
 project.com.sun.tools.visualvm.sampler=sampler
 project.com.sun.tools.visualvm.threaddump=threaddump
