--- a/visualvm/profiler/src/com/sun/tools/visualvm/profiler/Bundle.properties
+++ b/visualvm/profiler/src/com/sun/tools/visualvm/profiler/Bundle.properties
@@ -1,5 +1,5 @@
 #
-# Copyright 2007-2008 Sun Microsystems, Inc.  All Rights Reserved.
+# Copyright 2007-2010 Sun Microsystems, Inc.  All Rights Reserved.
 # DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
 #
 # This code is free software; you can redistribute it and/or modify it
@@ -65,7 +65,8 @@ MSG_Class_Sharing_Link=<a href="https://visualvm.dev.java.net/troubleshooting.ht
 
 MSG_Class_Sharing_Nolink=<nobr>https://visualvm.dev.java.net/troubleshooting.html#xshare</nobr>
 
-LBL_Profile=Profile:
+LBL_Profile=Profile\:
+LBL_Sample=Sample\:
 
 LBL_Cpu=CPU
 
@@ -79,31 +80,13 @@ MSG_Profiling_results=Profiling results
 
 LBL_Snapshot=Snapshot
 
-MSG_Compare_Snapshots=&Compare
-
-DESCR_Compare_Snapshots=Compare profiler snapshots
-
-MSG_Not_Comparable=<html><b>Selected snapshots are not comparable.</b><br><br>Check snapshots type and settings.</html>
-
 MSG_Profile=&Profile
 
 DESCR_Profile=Profile
 
-MSG_Save_Profiler_Snapshot_As=Save Profiler Snapshot As
-
 MSG_Profiler_Snapshot=Pro&filer Snapshot
 
 DESCR_Profiler_Snapshot=Profiler Snapshot
-
-LBL_Snapshots_Comparison=Snapshots Comparison
-
-DESCR_Snapshots_Comparison=Profiler Snapshots Comparison\: {0} compared to {1}
-
-MSG_Profiler_Snapshots=Profiler Snapshots
-
-MSG_Opening_Profiler_Snapshot=Opening Profiler Snapshot...
-
-MSG_Opening_snapshot_failed.=Opening snapshot failed.
 
 MSG_Calibration=<html><b>Calibration will be performed.</b><br><br>Profiler will perform initial JDK calibration. Please make sure that other applications<br>are not placing a noticeable load on your machine at this time and click the OK button.</html>
 
@@ -154,5 +137,3 @@ LBL_Track_Every2=object allocations
 TOOLTIP_Track_Every=Only every n-th object is tracked to reduce profiling overhead. Total number of allocated objects is not affected.
 
 TOOLTIP_Stack_Traces=Information about methods allocating the objects is collected
-
-DESCR_ProfilerSnapshot=Profiler snapshot.
