--- a/visualvm/sampler/src/com/sun/tools/visualvm/sampler/Bundle.properties
+++ b/visualvm/sampler/src/com/sun/tools/visualvm/sampler/Bundle.properties
@@ -32,7 +32,6 @@ OpenIDE-Module-Short-Description=Sampling CPU and memory profiler
 
 LBL_Sampler=Sampler
 
-
 LBL_Sample=Sample\:
 LBL_Profile=Profile\:
 
@@ -44,8 +43,6 @@ LBL_Stop=Stop
 
 LBL_Status=Status:
 
-MSG_Profiling_results=CPU Sampling results
-
 MSG_Sample=&Sample
 
 DESCR_Sample=Analysis by sampling profiler
@@ -55,3 +52,59 @@ LBL_Settings=Settings
 LBL_Cpu_settings=CPU settings
 
 LBL_Memory_settings=Memory settings
+
+MSG_Checking_Availability=Checking availability...
+
+LBL_Information=Information
+
+LBL_Summary=Summary
+
+LBL_Undefined=<undefined>
+
+MSG_Application_terminated=application terminated
+
+MSG_Sampling_inactive=sampling inactive
+
+MSG_Cpu_progress=CPU sampling in progress
+
+MSG_Memory_progress=memory sampling in progress
+
+LBL_Refreshing=refreshing...
+
+LBL_Cpu_samples=CPU samples
+
+LBL_Cpu_sampling=<b>CPU sampling:</b><br>
+
+LBL_Memory_samples=Memory samples
+
+LBL_Memory_sampling=<br><br><b>Memory sampling:</b><br>
+
+MSG_No_save_data_cpu=<html><b>No data to save</b><br><br>Make sure the application performs some code<br>and the selected filter is not filtering out the calls.</html>
+
+MSG_No_save_data_memory=<html><b>No data to save</b><br><br>Make sure the application performs some code.</html>
+
+MSG_Thread_dump_unsupported=thread dump not supported
+
+MSG_Available=Available.
+
+MSG_Available_details=Available ({0}).
+
+MSG_Available_details2=Available ({0}, {1}).
+
+MSG_Press_cpu=Press the 'CPU' button to start collecting performance data.
+
+MSG_Press_mem=Press the 'Memory' button to start collecting memory data.
+
+MSG_Unavailable=Not available.
+
+MSG_Unavailable_remote=Not available. Remote applications are not supported.
+
+MSG_Unavailable_connect_jdk=Not available. Cannot connect to target application. Make sure the application is running on a supported JDK 6 or JDK 7.
+
+MSG_Unavailable_connect_log=Not available. Cannot connect to target application. Check the logfile for details (use Help | About | Logfile).
+
+MSG_Unavailable_read_log=Not available. Failed to read objects in target application. Check the logfile for details (use Help | About | Logfile).
+
+MSG_Gc_unsupported=perform GC not supported
+
+MSG_HeapDump_unsupported=heap dump not supported
