--- a/visualvm/sampler/src/com/sun/tools/visualvm/sampler/cpu/Bundle.properties
+++ b/visualvm/sampler/src/com/sun/tools/visualvm/sampler/cpu/Bundle.properties
@@ -23,3 +23,27 @@
 # have any questions.
 
 LBL_Cpu_settings=CPU settings
+
+LBL_Cpu_samples=CPU samples
+
+TOOLTIP_Pause_results=Pause live results
+
+TOOLTIP_Update_results=Update live results now
+
+LBL_Snapshot=Snapshot
+
+TOOLTIP_Snapshot=Take snapshot of collected results
+
+LBL_Thread_dump=Thread Dump
+
+TOOLTIP_Thread_dump=Take thread dump
+
+LBL_No_data=<No Data>
+
+MSG_unavailable=Not available.
+
+MSG_unavailable_init_jmx=Not available. Cannot initialize JMX connection to target application. Use 'Add JMX Connection' action to attach to the application.
+
+MSG_unavailable_create_jmx=Not available. Failed to create JMX connection to target application. Use 'Add JMX Connection' action to attach to the application.
+
+MSG_unavailable_threads=Not available. Cannot access threads in target application. Check the logfile for details (use Help | About | Logfile).
