--- a/visualvm/sampler/src/com/sun/tools/visualvm/sampler/memory/Bundle.properties
+++ b/visualvm/sampler/src/com/sun/tools/visualvm/sampler/memory/Bundle.properties
@@ -23,3 +23,51 @@
 # have any questions.
 
 LBL_Memory_settings=Memory settings
+
+LBL_Heap_histogram=Heap histogram
+
+LBL_PermGen_histogram=PermGen histogram
+
+COL_Class_name=Class Name
+
+COL_Bytes_rel=Bytes [%]
+
+COL_Bytes=Bytes
+
+COL_Instances=Instances
+
+TOOLTIP_Pause_results=Pause live results
+
+TOOLTIP_Update_results=Update live results now
+
+LBL_Deltas=Deltas
+
+TOOLTIP_Deltas=Show delta values
+
+LBL_Snapshot=Snapshot
+
+TOOLTIP_Snapshot=Take snapshot of collected results
+
+LBL_Gc=Peform GC
+
+TOOLTIP_Gc=Peform garbage collection in target application
+
+LBL_HeapDump=Heap Dump
+
+TOOLTIP_HeapDump=Take heap dump
+
+LBL_Starts_with=Starts with
+
+LBL_Contains=Contains
+
+LBL_Ends_with=Ends with
+
+LBL_Regexp=Regular expression
+
+LBL_Class_filter=[Class Name Filter]
+
+LBL_Classes=<b>Classes: </b>{0}
+
+LBL_Instances=<b>Instances: </b>{0}
+
+LBL_Bytes=<b>Bytes: </b>{0}
