I18N for VisualVM-Profiling
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2628 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/profiling/src/com/sun/tools/visualvm/profiling/presets/Bundle.properties
+++ b/visualvm/profiling/src/com/sun/tools/visualvm/profiling/presets/Bundle.properties
@@ -83,3 +83,61 @@ LBL_Track_Every2=object allocations
 TOOLTIP_Track_Every=Only every n-th object is tracked to reduce profiling overhead. Total number of allocated objects is not affected.
 
 TOOLTIP_Stack_Traces=Information about methods allocating the objects is collected
+
+LBL_Custom=Custom
+
+BTN_Save=Save...
+
+BTN_Edit=Edit...
+
+LBL_Preset=Preset\:
+
+MSG_Preset=Preset
+
+MSG_Default=Default
+
+CAPTION_Presets=Presets
+
+CAPTION_Misc=Miscellaneous
+
+MSG_No_presets=<No Presets Defined>
+
+TOOLTIP_Create_preset=Create new preset
+
+TOOLTIP_Delete_preset=Delete selected preset
+
+TOOLTIP_preset_up=Move selected preset up
+
+TOOLTIP_preset_down=Move selected preset down
+
+LBL_Preset_name=Preset Name\:
+
+LBL_Preselect_for=Preselect For\:
+
+LBL_Optional_class=[Optional Main Class or Display Name]
+
+LBL_Sampler_cpu=Sampler CPU
+
+LBL_Sampler_memory=Sampler Memory
+
+LBL_Profiler_cpu=Profiler CPU
+
+LBL_Profiler_memory=Profiler Memory
+
+LBL_Sampling_rate=Sampling frequency\:
+
+TOOLTIP_Sampling_rate=Sampling frequency [ms]
+
+LBL_units_ms=ms.
+
+LBL_Refresh_rate=Results refresh\:
+
+TOOLTIP_Refresh_rate=Results refresh rate [ms]
+
+LBL_Sampling_refresh=Sampling and refresh rate\:
+
+TOOLTIP_Sampling_refresh=Sampling frequency and results refresh rate [ms]
+
+TOOLTIP_Defined_presets=Defined presets
+
+TOOLTIP_Manage_presets=Create or manage presets
