A11Y for VisualVM-Profiling
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2629 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/profiling/src/com/sun/tools/visualvm/profiling/presets/Bundle.properties
+++ b/visualvm/profiling/src/com/sun/tools/visualvm/profiling/presets/Bundle.properties
@@ -25,7 +25,7 @@
 OptionsCategory_Name_Profiling=Profiling
 OptionsCategory_Title_Profiling=Profiling
 
-BTN_Reset2=R&eset
+BTN_Reset=&Reset
 LBL_ResetData=Reset calibration data\:
 
 LBL_Settings=Settings
@@ -34,27 +34,27 @@ LBL_Cpu_settings=CPU settings
 
 LBL_Memory_settings=Memory settings
 
-LBL_Profile_Allocations=Profile object allocations
+LBL_Profile_Allocations=&Profile object allocations
 
-LBL_Profile_AllocationsGC=Profile object allocations and GC
+LBL_Profile_AllocationsGC=Pr&ofile object allocations and GC
 
-LBL_Record_Stacktraces=Record allocations stack traces
+LBL_Record_Stacktraces=R&ecord allocations stack traces
 
 LBL_Run_GC=Run GC when getting results
 
 LBL_Restore_Defaults=Restore Defaults
 
-LBL_Root_Classes=Start profiling from classes\:
+LBL_Root_Classes=&Start profiling from classes\:
 
-LBL_Profile_Runnables=Profile new Runnables
+LBL_Profile_Runnables=Pr&ofile new Runnables
 
-LBL_Profile_Incl=Profile only classes\:
+LBL_Profile_Incl=&Profile only classes\:
 
-LBL_Profile_Excl=Do not profile classes\:
+LBL_Profile_Excl=&Do not profile classes\:
 
-LBL_Profile_Incl_S=Profile only packages\:
+LBL_Profile_Incl_S=&Profile only packages\:
 
-LBL_Profile_Excl_S=Do not profile packages\:
+LBL_Profile_Excl_S=&Do not profile packages\:
 
 MSG_Incorrect_CPU_settings=Incorrect CPU settings specified.
 
@@ -76,7 +76,7 @@ TOOLTIP_Allocations=Only object allocations are recorded
 
 TOOLTIP_Allocations_GC=Whole lifecycle of allocated objects is recorded
 
-LBL_Track_Every1=Track every
+LBL_Track_Every1=Tr&ack every
 
 LBL_Track_Every2=object allocations
 
@@ -110,9 +110,9 @@ TOOLTIP_preset_up=Move selected preset up
 
 TOOLTIP_preset_down=Move selected preset down
 
-LBL_Preset_name=Preset Name\:
+LBL_Preset_name=Preset &Name\:
 
-LBL_Preselect_for=Preselect For\:
+LBL_Preselect_for=Preselect &For\:
 
 LBL_Optional_class=[Optional Main Class or Display Name]
 
@@ -124,17 +124,17 @@ LBL_Profiler_cpu=Profiler CPU
 
 LBL_Profiler_memory=Profiler Memory
 
-LBL_Sampling_rate=Sampling frequency\:
+LBL_Sampling_rate=&Sampling frequency\:
 
 TOOLTIP_Sampling_rate=Sampling frequency [ms]
 
 LBL_units_ms=ms.
 
-LBL_Refresh_rate=Results refresh\:
+LBL_Refresh_rate=R&esults refresh\:
 
 TOOLTIP_Refresh_rate=Results refresh rate [ms]
 
-LBL_Sampling_refresh=Sampling and refresh rate\:
+LBL_Sampling_refresh=&Sampling and refresh rate\:
 
 TOOLTIP_Sampling_refresh=Sampling frequency and results refresh rate [ms]
 
