Heap Dump action & buttons now support remote heap dump
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2631 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/heapdump/src/com/sun/tools/visualvm/heapdump/impl/Bundle.properties
+++ b/visualvm/heapdump/src/com/sun/tools/visualvm/heapdump/impl/Bundle.properties
@@ -42,3 +42,13 @@ MSG_Cannot_take_heap_dump=Cannot take heap dump for
 LBL_Creating_Heap_Dump=Creating Heap Dump...
 
 LBL_Loading_Heap_Dump=Loading Heap Dump...
+
+CAPTION_Remote_heap_dump=Remote Heap Dump
+
+MSG_Remote_heap_dump=&Heap dump file to be created on the remote system\:
+
+MSG_Dump_failed=Failed to take remote heap dump for this application.
+
+MSG_Dump_save_failed=Failed to create remote heap dump and save it\:\n{0}
+
+MSG_Dump_ok=Heap dump has been created and saved on the remote system:\n{0}\n\nMove the file to the local system and use File | Load... action to open it.
