--- a/visualvm/nbproject/platform.properties
+++ b/visualvm/nbproject/platform.properties
@@ -2,14 +2,23 @@
 disabled.clusters=\
     harness
 disabled.modules=\
+    org.jdesktop.layout,\
+    org.netbeans.api.visual,\
     org.netbeans.core.execution,\
+    org.netbeans.core.netigso,\
+    org.netbeans.core.osgi,\
     org.netbeans.core.output2,\
+    org.netbeans.libs.felix,\
+    org.netbeans.libs.jsr223,\
     org.netbeans.libs.junit4,\
+    org.netbeans.libs.osgi,\
     org.netbeans.modules.core.kit,\
     org.netbeans.modules.favorites,\
     org.netbeans.modules.options.keymap,\
     org.netbeans.modules.templates,\
+    org.netbeans.modules.spi.actions,\
     org.openide.compat,\
+    org.openide.options,\
     org.openide.util.enumerations
 enabled.clusters=\
     platform,\
