--- a/plugins/nbproject/project.properties
+++ b/plugins/nbproject/project.properties
@@ -16,7 +16,8 @@ modules=\
     ${project.com.sun.tools.visualvm.modules.security}:\
     ${project.com.sun.tools.visualvm.modules.tracerjvmstat}:\
     ${project.com.sun.tools.visualvm.modules.tracer.dynamic}:\
-    ${project.com.sun.tools.visualvm.modules.threadinspect}
+    ${project.com.sun.tools.visualvm.modules.threadinspect}:\
+    ${project.com.sun.tools.visualvm.modules.tracer.support}
 project.com.sun.appserv.management=glassfish/amx-api
 project.com.sun.tools.visualvm.application.type.custom=extapptypes
 project.com.sun.tools.visualvm.modules.customtype.lib=extapptypes.lib
@@ -27,6 +28,7 @@ project.com.sun.tools.visualvm.modules.security=security
 project.com.sun.tools.visualvm.modules.systray=systray
 project.com.sun.tools.visualvm.modules.threadinspect=threadinspect
 project.com.sun.tools.visualvm.modules.tracer.dynamic=tracer.dynamic
+project.com.sun.tools.visualvm.modules.tracer.support=tracersupport
 project.net.java.visualvm.modules.glassfish=glassfish
 project.jsyntaxpane.lib=jsyntaxpane-lib
 project.com.sun.tools.visualvm.modules.extensions=extensions
