Renaming Tracer-related modules to start with Tracer*
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2655 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/plugins/tracerjvmstat/src/com/sun/tools/visualvm/modules/tracerjvmstat/Bundle.properties
+++ b/plugins/tracerjvmstat/src/com/sun/tools/visualvm/modules/tracerjvmstat/Bundle.properties
@@ -25,6 +25,6 @@
 OpenIDE-Module-Display-Category=Tracer
 OpenIDE-Module-Long-Description=\
     A plugin to add Jvmstat counters as Tracer probes.
-OpenIDE-Module-Name=VisualVM-Tracer-Jvmstat
+OpenIDE-Module-Name=Tracer-Jvmstat Probes
 OpenIDE-Module-Short-Description=Tracer Jvmstat probes
 
