--- a/plugins/tracermonitor/src/com/sun/tools/visualvm/modules/tracer/monitor/Bundle.properties
+++ b/plugins/tracermonitor/src/com/sun/tools/visualvm/modules/tracer/monitor/Bundle.properties
@@ -22,8 +22,8 @@
 # CA 95054 USA or visit www.sun.com if you need additional information or
 # have any questions.
 
-OpenIDE-Module-Display-Category=Tools
+OpenIDE-Module-Display-Category=Tracer
 OpenIDE-Module-Long-Description=\
-    Set of Tracer probes providing the same data as the Monitor tab.
-OpenIDE-Module-Name=VisualVM-Tracer-Monitor
+    Set of Tracer probes providing the same metrics as the Monitor tab.
+OpenIDE-Module-Name=Tracer-Monitor Probes
 OpenIDE-Module-Short-Description=Monitor probes for Tracer
