--- a/plugins/tracer/src/com/sun/tools/visualvm/modules/tracer/impl/Bundle.properties
+++ b/plugins/tracer/src/com/sun/tools/visualvm/modules/tracer/impl/Bundle.properties
@@ -22,9 +22,9 @@
 # CA 95054 USA or visit www.sun.com if you need additional information or
 # have any questions.
 
-OpenIDE-Module-Display-Category=Libraries
+OpenIDE-Module-Display-Category=Tracer
 OpenIDE-Module-Long-Description=\
-    VisualVM-Tracer is a framework and graphical user interface for visual tracing of applications or other data sources using Tracer probes.\n\n\
-    Note: the public API of this module is not stable, incompatible changes may happen at any time!
-OpenIDE-Module-Name=VisualVM-Tracer
+    Tracer-Framework module is a framework and graphical user interface for visual tracing of applications or other data sources using Tracer probes.\n\
+    <BR>\n<BR>\nNote: the public API of this module is not stable, incompatible changes may happen at any time!
+OpenIDE-Module-Name=Tracer-Framework
 OpenIDE-Module-Short-Description=Tracer framework and GUI
