bugfix #387, display dialog for deleted core dumps
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2656 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/coredump/src/com/sun/tools/visualvm/coredump/impl/Bundle.properties
+++ b/visualvm/coredump/src/com/sun/tools/visualvm/coredump/impl/Bundle.properties
@@ -78,3 +78,7 @@ MSG_Adding=Adding {0}...
 LBL_JVM_arguments=JVM arguments
 
 LBL_System_properties=System properties
+
+Title_Unresolved_CoreDumps=Could Not Load Core Dump
+
+MSG_Unresolved_CoreDumps=<html><b>These core dumps could not be found:</b><br>Do you want to load them on next VisualVM session?<br><br></html>
