Unifying Tracer-Jvmstat Probes code base
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2661 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/plugins/nbproject/project.properties
+++ b/plugins/nbproject/project.properties
@@ -14,7 +14,7 @@ modules=\
     ${project.com.sun.tools.visualvm.modules.tracermonitor}:\
     ${project.com.sun.tools.visualvm.modules.saplugin}:\
     ${project.com.sun.tools.visualvm.modules.security}:\
-    ${project.com.sun.tools.visualvm.modules.tracerjvmstat}:\
+    ${project.com.sun.tools.visualvm.modules.tracer.jvmstat}:\
     ${project.com.sun.tools.visualvm.modules.tracer.dynamic}:\
     ${project.com.sun.tools.visualvm.modules.threadinspect}:\
     ${project.com.sun.tools.visualvm.modules.tracer.support}
@@ -35,7 +35,7 @@ project.com.sun.tools.visualvm.modules.extensions=extensions
 project.com.sun.tools.visualvm.modules.saplugin=saplugin
 project.com.sun.tools.visualvm.modules.buffermonitor=buffermonitor
 project.com.sun.tools.visualvm.modules.tracer=tracer
-project.com.sun.tools.visualvm.modules.tracerjvmstat=tracerjvmstat
+project.com.sun.tools.visualvm.modules.tracer.jvmstat=tracerjvmstat
 project.com.sun.tools.visualvm.modules.tracermonitor=tracermonitor
 
 branding.token=visualvm
