Unifying Tracer-Monitor Probes code base
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2662 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/plugins/nbproject/project.properties
+++ b/plugins/nbproject/project.properties
@@ -11,7 +11,7 @@ modules=\
     ${project.jsyntaxpane.lib}:\
     ${project.com.sun.tools.visualvm.modules.oqlsyntax}:\
     ${project.com.sun.tools.visualvm.modules.tracer}:\
-    ${project.com.sun.tools.visualvm.modules.tracermonitor}:\
+    ${project.com.sun.tools.visualvm.modules.tracer.monitor}:\
     ${project.com.sun.tools.visualvm.modules.saplugin}:\
     ${project.com.sun.tools.visualvm.modules.security}:\
     ${project.com.sun.tools.visualvm.modules.tracer.jvmstat}:\
@@ -36,7 +36,7 @@ project.com.sun.tools.visualvm.modules.saplugin=saplugin
 project.com.sun.tools.visualvm.modules.buffermonitor=buffermonitor
 project.com.sun.tools.visualvm.modules.tracer=tracer
 project.com.sun.tools.visualvm.modules.tracer.jvmstat=tracerjvmstat
-project.com.sun.tools.visualvm.modules.tracermonitor=tracermonitor
+project.com.sun.tools.visualvm.modules.tracer.monitor=tracermonitor
 
 branding.token=visualvm
 branding.dir=none
